# jeels

./: .gitattributes  .gitignore  Cargo.toml  README.md
content/: PROMT.md  PROMT_IMG.md
content/待ちます, 探します, 見つけます/: content.yaml
content_promt/: LIBRARY.md  PROMT_IMG.md  README.md  TTS.MD
fish_speech_prompts/: ja_speaker_0.npy  ja_speaker_1.npy  ja_speaker_2.npy  ja_speaker_3.npy  ja_speaker_4.npy  ja_speaker_5.npy  ja_speaker_6.npy  ja_speaker_7.npy  ja_speaker_8.npy  ja_speaker_9.npy
jeels/: index.html  package-lock.json  package.json
jeels-cli/: .gitignore  Cargo.toml  arch.c4  build.rs  spec.md  word.md
jeels-cli/src/: lib.rs  main.rs  settings.rs
jeels-cli/src/application/: create_card.rs  embedding_service.rs  furigana_service.rs  llm_service.rs  mod.rs  srs_service.rs  use_cases.rs  user_repository.rs
jeels-cli/src/application/use_cases/: complete_lesson.rs  create_card.rs  delete_card.rs  edit_card.rs  find_similarity.rs  find_synonyms.rs  generate_answer.rs  get_furigana.rs  get_hints.rs  list_cards.rs  rate_card.rs  rebuild_database.rs  start_study_session.rs
jeels-cli/src/cli/: anki.rs  card.rs  learn.rs  migii.rs  mod.rs
jeels-cli/src/domain/: card.rs  error.rs  mod.rs  mod_test.rs  review.rs  value_objects.rs
jeels-cli/src/infrastructure/: candle_llm.rs  embedding_generator.rs  furigana_generator.rs  gemini_llm.rs  llm.rs  mod.rs  openai_llm.rs  openrouter_llm.rs  srs.rs  user_repository.rs
jeels-cli/src/tui/: app.rs  event_handler.rs  mod.rs  terminal.rs  ui.rs  widgets.rs
jeels-cli/src/tui/ui/: card_create.rs  card_edit.rs  card_list.rs  card_view.rs  common.rs  main_menu.rs  mod.rs  study_session.rs  theme.rs
jeels-cli/tests/: create_card.rs  delete_card.rs  edit_card.rs  find_similarity.rs  find_synonyms.rs  get_hints.rs  mod.rs  rate_card.rs  start_study_session.rs  view_card.rs
jeels/public/content/: index.yaml
jeels/public/content/動詞/: index.yaml
jeels/public/content/動詞/待ちます, 探します, 見つけます/: content.yaml
jeels/public/content/形容詞/: index.yaml
jeels/public/content/形容詞/甘い, 辛い, 塩辛い/: content.yaml
jeels/src/: App.css  App.tsx  main.tsx
jeels/src-tauri/: Cargo.toml  tauri.conf.json
jeels/src-tauri/src/: main.rs
jeels/src/components/: FeedView.tsx  Layout.tsx  LessonsView.tsx  Router.tsx  TranslateView.tsx
jeels/src/store/: index.ts  lessonStore.ts  types.ts  userStore.ts
src/: audio_content.rs  background.rs  ffprobe.rs  main.rs  pexels.rs  video_content.rs
src/domain/: duolingo_words.json  jlpt_vocabulary.json  vocabulary_n2.json  vocabulary_n3.json
steering_documents/: README.md  feed.md  jeels_ui.md  lessons.md  style.md  translate.md
words/: jltp_words.json  migii_words.json  vocabulary_n1.json  vocabulary_n4.json  vocabulary_n5.json
