[package]
name = "jeels"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
openai = "1.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ulid = "1.2.1"
indicatif = "0.18"
colored = "3.0"
futures = "0.3"
rand = "0.9.2"
