[package]
name = "jeels_cli"
version = "0.1.0"
edition = "2024"

[dependencies]

# System
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
toml = "0.9"
tempfile = "3.23"
serde_json = "1.0"

# Domain
ulid = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["std", "clock", "serde"] }

# Japan
fsrs = "5.2"

# Database
polodb_core = "5.1"

# Machine Learning
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
tokenizers = "0.22"
hf-hub = "0.4"

# TUI
clap = { version = "4.5", features = ["derive"] }
iocraft = "0.7"
smol = "2.0"
