[package]
name = "jeels_cli"
version = "0.1.0"
edition = "2024"

[dependencies]

# System
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
toml = "0.9"
tempfile = "3.23"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
ordered-float = "5.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAI
async-openai = "0.30"

# Domain
ulid = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["std", "clock", "serde"] }

# Japan
fsrs = "5.2"
autoruby = { version = "0.5", features = ["integrated"] }

# Database
polodb_core = "5.1"

# Machine Learning
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
text-embeddings-backend-core = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.8.3" }
text-embeddings-backend-candle = { git = "https://github.com/huggingface/text-embeddings-inference.git", version = "1.8.3" }
tokenizers = { version = "0.22.1", default-features = false, features = [
    "onig",
    "esaxx_fast",
] }
hf-hub = "0.4"

# TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
